fixed modal overflow.... was in wrong css file

--- a/happyhour/src/main/resources/static/css/master.css
+++ b/happyhour/src/main/resources/static/css/master.css
@@ -7,6 +7,10 @@ body{
 	overflow-y: hidden;
 }
 
+.modal-info{
+	max-height:400px;
+}
+
 .container-fluid {
 	width: 100%;
 	min-height: 50px;
